메뉴 탭 컴포넌트 추가

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,5 +1,7 @@
 .app-container {
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
     position: relative;
     top: 50px;
     width: 100%;
