검색 페이지, 검색창 컴포넌트화, 페이지 헤더 컴포넌트 생성

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -8,6 +8,12 @@
     height: calc(100vh - 100px);
 }
 
+.app-contents-wrap {
+    position: relative;
+    width: 100%;
+    padding: 20px 10px;
+}
+
 img, i {
     display: block;
     width: 100%;
