탭 컴포넌트 추가 및 커뮤니티, 스토어 페이지 생성

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -11,6 +11,7 @@
 @import "aside";
 @import "avatars";
 @import "badge";
+@import "tabs";
 @import "breadcrumb-menu";
 @import "breadcrumb";
 @import "buttons";
