로그인 페이지 완료

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -4,6 +4,9 @@
 // Additional typography
 @import "typography";
 
+// Color
+@import "colors";
+
 // Animations
 @import "animate";
 
@@ -37,7 +40,6 @@
 @import "layout";
 @import "others";
 @import "icon";
-@import "responsive";
 
 // Temporary fixes
 @import "temp";
