--- a/assets/scss/_input-group.scss
+++ b/assets/scss/_input-group.scss
@@ -1,6 +1,3 @@
-@import "responsive";
-
-
 .search_area {
     position: relative;
 
@@ -9,46 +6,39 @@
         align-items: center;
         position: relative;
         width: 100%;
-        height: vw(40);
-        border: vw(1) solid #ccc;
-        padding: 0 vw(10);
+        height: 40px;
+        border: 1px solid #ccc;
+        padding: 0 10px;
 
         .ic_search {
             flex-shrink: 0;
-            width: vw(24);
-            height: vw(24);
+            width: 24px;
+            height: 24px;
         }
 
         .search_field {
             position: relative;
-            min-width: calc(100% + vw(14));        
+            min-width: calc(100% + 14px);
             height: 100%;
-            font-size: vw(14);
+            font-size: 14px;
             transform: scale(0.86);
-            margin-left: vw(-16);
+            margin-left: -16px;
         }
     }
 
     .api_atcmp_wrap {
         position: relative;
-        border-bottom: vw(1) solid #cccccc;
+        border-bottom: 1px solid #cccccc;
         .kwd_lst {
             position: relative;
-            padding: vw(6) 0;
+            padding: 6px 0;
             .item {
                 display: flex;
                 align-items: center;
-                padding: vw(2) vw(10);  
-                font-size: vw(14);
-                border-radius: vw(6);
-                .kwd {
-                    .fix {
-
-                    }
-                    .common_ico_kwd {
-
-                    }
-                }  
+                padding: 2px 10px;  
+                font-size: 14px;
+                border-radius: 6px;
+                                
                 &.on {
                     background: #cccccc;
                 }              
