--- a/assets/scss/_tabs.scss
+++ b/assets/scss/_tabs.scss
@@ -1,10 +1,8 @@
-@import "responsive";
-
 .tabs {
     overflow-y: auto;
     position: relative;
     width: 100%;
-    border-bottom: vw(1) solid #cccccc;
+    border-bottom: 1px solid #cccccc;
 
     ul {
         display: flex;
@@ -14,8 +12,8 @@
         li {
             flex: 1;
             min-width: calc(100% / 3);
-            font-size: vw(14);
-            padding: vw(10);
+            font-size: 14px;
+            padding: 10px;
             text-align: center;
 
             &.active {
@@ -29,5 +27,5 @@
 }
 
 .tab-content {
-    padding: vw(20);
+    padding: 20px;
 }
