로그인 버튼 활성/비활성 케이스 추가

--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -3,5 +3,6 @@ $secondary-color: #FFFC00;
 $accent-color: #E50914;
 
 $color-white: #ffffff;
+$color-grey: #cccccc;
 $color-black: #000000;
 $color-pink: #EA4AAA;
