--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -1,5 +1,15 @@
 .btn {
-    &.primary {
-        background: $primary-color;
+    transition: all 0.5s ease-in-out;
+
+    &.login {
+        background: $color-grey;
     }
+
+    &.primary {
+
+        &.active {
+            background: $primary-color;
+        }
+    }
+
 }
