로그인 시 메인 페이지로 라우팅 되도록 추가

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -5,6 +5,14 @@
         background: $color-grey;
     }
 
+    &.confirm {
+        background: $secondary-color;
+    }
+
+    &.cancel {
+        background: $color-grey;
+    }
+
     &.primary {
 
         &.active {
