--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -19,3 +19,23 @@ img, i {
     width: 100%;
     height: 100%;
 }
+
+// modal
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    .modal-content {
+        background-color: $color-white;
+        padding: 20px;
+        border-radius: 4px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    }
+}
