--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -39,3 +39,8 @@ img, i {
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     }
 }
+
+// chat
+.chat-wrapper {
+    background: $primary-color;
+}
