슬라이더 컴포넌트 탭메뉴와 연결(진행중)

--- a/assets/scss/_tabs.scss
+++ b/assets/scss/_tabs.scss
@@ -42,5 +42,9 @@
                 border: 2px solid $primary-color;
             }
         }
+
+        &.on {
+            border: 2px solid $primary-color;
+        }
     }
 }
