--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -20,6 +20,14 @@ img, i {
     height: 100%;
 }
 
+.top-title {
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Nanum Gothic", Nanum Gothic, HelveticaNeue-Light, AppleSDGothicNeo-Light,
+    sans-serif;
+    padding: 20px;    
+}
+
 // modal
 .modal-overlay {
     position: fixed;
@@ -33,6 +41,7 @@ img, i {
     align-items: center;    
     
     .modal-content {
+        width: 90%;
         background-color: $color-white;
         padding: 20px;
         border-radius: 4px;
@@ -41,6 +50,32 @@ img, i {
             font-family: "Nanum Gothic", Nanum Gothic, HelveticaNeue-Light, AppleSDGothicNeo-Light,
     sans-serif;
         }        
+    }    
+}
+
+.bottom-popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    .modal-content {
+        width: 100%;
+        min-height: 40vh;
+        background-color: $color-white;
+        padding: 20px;
+        margin-top: auto;        
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        .close-popup {
+            display: flex;
+            margin-left: auto;
+        }
     }
 }
 
