채팅서버추가

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -28,6 +28,11 @@
         border-radius: 8px;
     }
 
+    &.send {
+        background: $primary-color;
+        color: $color-white;
+    }
+
     &.confirm {
         background: $secondary-color;
     }
