공통 헤더 내 페이지별 헤더 타이틀 케이스별 적용

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Indie+Flower&family=Noto+Sans+KR:wght@900&family=Noto+Serif+KR&display=swap');
 
-* {
-    font-family: 'Noto Serif KR', serif;  
+* {    
+    font-family: "Nanum Gothic", Nanum Gothic, HelveticaNeue-Light, AppleSDGothicNeo-Light,
+    sans-serif;
 }
 
 // 영문폰트 {font-family: "Caprasimo", cursive;}
