--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -33,14 +33,15 @@ img, i {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 10;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;    
     
     .modal-content {
+        position: relative;
         width: 90%;
         background-color: $color-white;
         padding: 20px;
@@ -49,8 +50,17 @@ img, i {
         h2, p, button {
             font-family: "Nanum Gothic", Nanum Gothic, HelveticaNeue-Light, AppleSDGothicNeo-Light,
     sans-serif;
-        }        
-    }    
+        }
+    }
+    
+    .dim {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
 }
 
 .bottom-popup-overlay {
@@ -59,12 +69,12 @@ img, i {
     left: 0;
     z-index: 10;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    height: 100%;    
     display: flex;
     justify-content: flex-end;
     align-items: center;
     .modal-content {
+        position: relative;
         width: 100%;
         min-height: 40vh;
         background-color: $color-white;
@@ -76,7 +86,15 @@ img, i {
         .close-popup {
             display: flex;
             margin-left: auto;
-        }
+        }        
+    }
+    .dim {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
     }
 }
 
