--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,4 +1,4 @@
-$primary-color: #03C75A;
+$primary-color: #ffdfb4;
 $secondary-color: #FFFC00;
 $accent-color: #E50914;
 
@@ -7,3 +7,4 @@ $color-grey: #cccccc;
 $color-black: #000000;
 $color-pink: #EA4AAA;
 $color-sky: #E1F5FE;
+$color-green: #03C75A;
