--- a/assets/scss/_widgets.scss
+++ b/assets/scss/_widgets.scss
@@ -1,6 +1,6 @@
 .best-play {    
     .top-box {        
-        background: url("../images/carrot.png") center center repeat $primary-color;
+        background: url("../images/carrot.png") center center repeat $color-green;
         color: $color-white;            
     }
     .best-play-container {        
