--- a/assets/scss/_widgets.scss
+++ b/assets/scss/_widgets.scss
@@ -1,4 +1,4 @@
-.best-play {    
+.media-play {    
     .top-box {        
         background: url("../images/carrot.png") center center repeat $color-green;
         color: $color-white;            
