--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -23,7 +23,7 @@ img, i {
 .top-title {
     font-size: 20px;
     font-weight: bold;    
-    padding: 0 20px;
+    padding: 0 20px 20px;
 }
 
 // modal
