조인 성공시 꽃가루 날리는 효과 추가

--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -3,7 +3,7 @@ $secondary-color: #FFFC00;
 $accent-color: #E50914;
 
 $color-white: #ffffff;
-$color-grey: #cccccc;
+$color-grey: #E5E5E5;
 $color-black: #000000;
 $color-pink: #EA4AAA;
 $color-sky: #E1F5FE;
