--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -40,7 +40,7 @@ img, i {
     
     .modal-content {
         position: relative;
-        width: 90%;
+        width: calc(100% - 40px);
         background-color: $color-white;
         padding: 20px;
         border-radius: 4px;
