--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Indie+Flower&family=Noto+Sans+KR:wght@900&family=Noto+Serif+KR&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
 
-* {    
-    // font-family: "Nanum Gothic", Nanum Gothic, HelveticaNeue-Light, AppleSDGothicNeo-Light,
-    // sans-serif;
-    font-family: 'Bagel Fat One', cursive;
+* {
+    font-family: "Nanum Gothic", Nanum Gothic, HelveticaNeue-Light, AppleSDGothicNeo-Light,
+    sans-serif;
 }
 
 // 영문폰트 {font-family: "Caprasimo", cursive;}
