--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -1,11 +1,13 @@
 .btn {
+    font-size: 1rem;
+    font-weight: bold;
     transition: all 0.5s ease-in-out;    
 
     &.login {
-        background: $color-grey;
+        background: $color-grey-1;
         
         &.active {
-            background: $color-green;    
+            background: $color-grey-4;    
         }
     }
 
@@ -14,10 +16,10 @@
         align-items: center;
         margin-top: 14px;
         margin-left: auto;
-        background: $color-green;
+        background: $color-grey-4;
         border-radius: 8px;
         &.disabled {
-            background: $color-grey;
+            background: $color-grey-1;
         }
     }
 
@@ -27,7 +29,7 @@
     }
 
     &.send {
-        background: $color-green;
+        background: $color-grey-4;
         color: $color-white;
     }
 
@@ -36,11 +38,16 @@
     }
 
     &.cancel {
-        background: $color-grey;
+        background: $color-grey-1;
     }
 
     &.primary {
         background: $primary-color;
+    }
+
+    &.secondary {        
+        background: $color-light-grey-0;
+        color: $color-grey-0;        
     }
 
     &.like {
@@ -80,6 +87,20 @@
             &:after {
                 opacity: 0.1;
             }        
+        }
+    }
+    
+    &.type-line {
+        background: transparent; 
+        border-radius: 2rem;
+        &.primary {
+            border: 1px solid $primary-color;
+            color: $primary-color;
+        }
+
+        &.secondary {
+            border: 1px solid $color-light-grey-0;            
+            color: $color-light-grey-0;;
         }
     }
 }
