--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,10 +1,18 @@
-$primary-color: #ffdfb4;
-$secondary-color: #FFFC00;
+$primary-color: #17171A;
+$secondary-color: #1D1E21;
 $accent-color: #E50914;
 
 $color-white: #ffffff;
-$color-grey: #E5E5E5;
 $color-black: #000000;
-$color-pink: #EA4AAA;
-$color-sky: #E1F5FE;
-$color-green: #03C75A;
+
+$color-grey-0: #232628;
+$color-grey-1: #292E2F;
+$color-grey-2: #2F3536;
+$color-grey-3: #353D3D;
+$color-grey-4: #3C4544;
+
+$color-light-grey-0: #F5F5F5;
+$color-light-grey-1: #EBEBEC;
+$color-light-grey-2: #E2E2E2;
+$color-light-grey-3: #D8D8D9;
+$color-light-grey-4: #CFCFCF;
