--- a/assets/scss/_input-group.scss
+++ b/assets/scss/_input-group.scss
@@ -20,7 +20,7 @@
             position: relative;
             min-width: calc(100% + 14px);
             height: 100%;
-            font-size: 14px;
+            font-size: 1rem;
             transform: scale(0.86);
             margin-left: -16px;
         }
@@ -36,7 +36,7 @@
                 display: flex;
                 align-items: center;
                 padding: 2px 10px;  
-                font-size: 14px;
+                font-size: 1rem;
                 border-radius: 6px;
                                 
                 &.on {
