--- a/assets/scss/_widgets.scss
+++ b/assets/scss/_widgets.scss
@@ -1,11 +1,42 @@
 .media-play {    
-    .top-box {        
-        background: url("../images/carrot.png") center center repeat $color-green;
-        color: $color-white;            
-    }
-    .best-play-container {        
-        .best-play-box {
-            background: $color-white;
+    position: relative;
+    width: 100%;
+    padding: 50px 0;    
+    background: $color-grey-2;
+    .top-box {
+        position: relative;   
+        background: $color-grey-2;
+        color: $color-white; 
+        p {        
+            position: relative;
+            z-index: 1;            
+            font-size: 1.2rem;            
+            line-height: 1.6rem;
+            font-weight: bold;
+            padding: 0 20px;            
         }
+        &:before {
+            position: absolute;
+            left: 0;
+            bottom: -1rem;
+            z-index: -1;
+            display: block;
+            clear: both;
+            content: '';
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(180deg,rgba(57,54,53,0) 0,rgba(57,54,53,.8) 68.09%,#393635 100%);
+        }
+    }
+    .best-play-container {      
+        padding: 0 20px;  
+        .best-play-box {
+            overflow: hidden;
+            background: $color-white;
+            border-radius: 20px;            
+        }        
+    }
+    .btn {
+        background: $color-light-grey-4;
     }
 }
