--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -1,5 +1,4 @@
 .btn {
-    font-size: 1rem;
     font-weight: bold;
     transition: all 0.5s ease-in-out;    
 
@@ -25,6 +24,7 @@
 
     &.chat {
         background: $secondary-color;
+        color: $color-light-grey-0;
         border-radius: 8px;
     }
 
