--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -23,7 +23,7 @@ img, i {
 .top-title {
     font-size: 1.2rem;
     font-weight: bold;    
-    padding: 0 20px 20px;
+    padding: 0 20px 1.2rem;
 }
 
 .header {
@@ -36,12 +36,12 @@ img, i {
     justify-content: space-between;
     position: relative;
     width: 100%;
-    height: 70px;
-    padding: 6px 20px;
+    height: 4.5rem;
+    padding: 0.4rem 20px;
     background: $primary-color;
-    box-shadow: 6px 0px 5px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0.4rem 0 0.4rem 0.1rem rgba(0, 0, 0, 0.1);
     .page-title {
-      font-size: 17px;        
+      font-size: 1.1rem;
       margin-left: -32px;
       margin-bottom: 0;
       color: $color-light-grey-0;
