--- a/assets/scss/_tabs.scss
+++ b/assets/scss/_tabs.scss
@@ -2,23 +2,50 @@
     overflow-y: auto;
     position: relative;
     width: 100%;
-    border-bottom: 1px solid #cccccc;
 
     ul {
+        position: relative;
         display: flex;
         align-content: center;
         width: 100%;
+        padding-left: 0;
 
         li {
+            position: relative;
             flex: 1;
             min-width: calc(100% / 3);
-            font-size: 1rem;
             padding: 10px;
             text-align: center;
 
-            &.active {
-                border-bottom: 1px solid #000;
+            &:after {
+                position: absolute;
+                left: 0;
+                bottom: 0;    
+                z-index: 1;            
+                display: none;
+                clear: both;
+                content: '';
+                width: 100%;
+                height: 2px;
+                background: $color-grey-0;
             }
+
+            &.active {
+                &:after {
+                    display: block;
+                }   
+            }
+        }
+        &:after {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            display: block;
+            clear: both;
+            content: '';
+            width: 100%;
+            height: 0.1rem;
+            background: #E2E2E2;
         }
     }
     &::-webkit-scrollbar {
