--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Indie+Flower&family=Noto+Sans+KR:wght@900&family=Noto+Serif+KR&display=swap');
 
 * {
+    font-size: 1rem;
     font-family: "Nanum Gothic", Nanum Gothic, HelveticaNeue-Light, AppleSDGothicNeo-Light,
     sans-serif;
 }
