--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -1,4 +1,5 @@
 .btn {
+    font-size: 0.9rem;
     font-weight: bold;
     transition: all 0.5s ease-in-out;    
 
@@ -13,19 +14,22 @@
     &.join {
         display: flex;
         align-items: center;
-        margin-top: 14px;
+        margin-top: 1.3rem;
         margin-left: auto;
         background: $color-grey-4;
-        border-radius: 8px;
+        color: $color-white;
+        border-radius: 0.4rem;
         &.disabled {
-            background: $color-grey-1;
+            background: $color-light-grey-4;
+            color: $color-grey-4;
+            border: none;
         }
     }
 
     &.chat {
         background: $secondary-color;
         color: $color-light-grey-0;
-        border-radius: 8px;
+        border-radius: 0.4rem;
     }
 
     &.send {
@@ -52,8 +56,8 @@
 
     &.like {
         position: relative;
-        width: 24px;
-        height: 24px;
+        width: 1.2rem;
+        height: 1.2rem;
         &:before, &:after {      
             opacity: 0;      
             display: block;
@@ -71,15 +75,15 @@
             animation-fill-mode: forwards;
         }
         &:before {            
-            width: 36px;
-            height: 36px;
+            width: 1.6rem;
+            height: 1.6rem;
             transition: all 0.3s ease-in-out;
         }
         &:after {            
-            width: 48px;
-            height: 48px;                    
+            width: 2rem;
+            height: 2rem;
             transition: all 0.4s ease-in-out;    
-        }  
+        }
         &.on {            
             &:before {
                 opacity: 0.3;
@@ -94,12 +98,12 @@
         background: transparent; 
         border-radius: 2rem;
         &.primary {
-            border: 1px solid $primary-color;
+            border: 0.12rem solid $primary-color;
             color: $primary-color;
         }
 
         &.secondary {
-            border: 1px solid $color-light-grey-0;            
+            border: 0.12rem solid $color-light-grey-0;            
             color: $color-light-grey-0;;
         }
     }
