--- a/assets/scss/_input-group.scss
+++ b/assets/scss/_input-group.scss
@@ -35,7 +35,7 @@
                 display: flex;
                 align-items: center;
                 padding: 2px 10px;  
-                border-radius: 6px;
+                border-radius: 0.72rem;
                                 
                 &.on {
                     background: #cccccc;
