--- a/assets/scss/_tabs.scss
+++ b/assets/scss/_tabs.scss
@@ -13,7 +13,6 @@
         li {
             position: relative;
             flex: 1;
-            min-width: calc(100% / 3);
             padding: 10px;
             text-align: center;
 
@@ -33,7 +32,7 @@
             &.active {
                 &:after {
                     display: block;
-                }   
+                }
             }
         }
         &:after {
@@ -54,7 +53,7 @@
 }
 
 .tab-content {
-    padding: 20px;
+    padding: 0 20px;
 }
 
 // 관심사 탭 리스트
