불필요 scss파일 제거 및 로그인, 회원가입 페이지 개선&추가

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
 
 * {    
-    // font-family: "Nanum Gothic", Nanum Gothic, HelveticaNeue-Light, AppleSDGothicNeo-Light,
-    // sans-serif;
-    font-family: 'Bagel Fat One', cursive;
+    font-family: "Nanum Gothic", Nanum Gothic, HelveticaNeue-Light, AppleSDGothicNeo-Light,
+    sans-serif;
+    // font-family: 'Bagel Fat One', cursive;
 }
 
 // 영문폰트 {font-family: "Caprasimo", cursive;}
