--- a/assets/scss/_input-group.scss
+++ b/assets/scss/_input-group.scss
@@ -46,3 +46,52 @@
         }        
     }
 }
+
+.login-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 20px;
+  
+    .form-box {      
+        width: 100%;     
+        
+        .input-box {
+            display: flex;
+            align-content: center;
+            flex-direction: column;
+            border-bottom: 1px solid #cccccc;        
+            label {
+                font-size: 12px;
+                margin-bottom: 8px;
+            }
+          
+            input {
+                position: relative;
+                font-size: 13px;
+                &::placeholder {
+                    font-size: 12px;
+                    color: #cccccc;
+                }
+            }
+        }
+
+        .case-text {
+            font-size: 12px;
+            font-weight: bold;
+            color: $flickr;
+            margin-top: 12px;
+        }
+          
+        &.active {
+            .input-box {
+                border-bottom: 1px solid #ffbd2c;
+                label {
+                    font-weight: 600;
+                }    
+            }                    
+        }
+    }
+}
