--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,5 +1,6 @@
 $primary-color: #17171A;
 $secondary-color: #1D1E21;
+$pointer-color: #f89b00;
 $accent-color: #E50914;
 
 $color-white: #ffffff;
@@ -10,9 +11,11 @@ $color-grey-1: #292E2F;
 $color-grey-2: #2F3536;
 $color-grey-3: #353D3D;
 $color-grey-4: #3C4544;
+$color-grey-5: #3C4544;
 
 $color-light-grey-0: #F5F5F5;
 $color-light-grey-1: #EBEBEC;
 $color-light-grey-2: #E2E2E2;
 $color-light-grey-3: #D8D8D9;
 $color-light-grey-4: #CFCFCF;
+$color-light-grey-5: #b6b4b4;
