--- a/assets/scss/_widgets.scss
+++ b/assets/scss/_widgets.scss
@@ -11,9 +11,9 @@
             position: relative;
             z-index: 1;            
             font-size: 1.2rem;            
-            line-height: 1.6rem;
+            line-height: 1.8rem;
             font-weight: bold;
-            padding: 0 20px;            
+            padding: 0 20px 20px 20px;            
         }
         &:before {
             position: absolute;
