--- a/assets/scss/_input-group.scss
+++ b/assets/scss/_input-group.scss
@@ -69,6 +69,7 @@
             input {
                 position: relative;
                 font-size: 13px;
+                padding: 0.7rem 0;
                 &::placeholder {
                     font-size: 12px;
                     color: #cccccc;
