--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -62,15 +62,24 @@ img, i {
     }
   }
   .menu {
+    overflow-y: auto;
     position: absolute;
-    top: 2.8rem;
-    left: 0.7rem;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
     background: $color-white;
-    padding: 0.7rem;
+    padding: 2rem 20px;
     border: 0.2rem solid $color-light-grey-1;
     display: flex;
     flex-direction: column;
-    width: 200px;
+    .btn-close {
+        margin-left: auto;
+    }
+    a {
+        font-size: 1rem;
+        margin-bottom: 1.4rem;
+    }
   }
 
 // modal
