슬라이더 스타일 수정

--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,6 +1,6 @@
 $primary-color: #17171A;
 $secondary-color: #1D1E21;
-$pointer-color: #f89b00;
+$pointer-color: #e05c2e;
 $accent-color: #E50914;
 
 $color-white: #ffffff;
