--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -47,7 +47,6 @@ img, i {
       color: $color-light-grey-0;
     }
 }
-
 .hamburger-button {
     display: flex;
     flex-direction: column;
@@ -65,7 +64,7 @@ img, i {
     overflow-y: auto;
     position: absolute;
     left: 0;
-    top: 0;
+    top: 0;    
     width: 100%;
     height: 100vh;
     background: $color-white;
@@ -75,12 +74,48 @@ img, i {
     flex-direction: column;
     .btn-close {
         margin-left: auto;
+    }    
+}
+
+.gnb {
+    margin-top: 3rem;
+    li {
+        a {    
+            display: block;    
+            font-size: 14px;
+            font-weight: 500;
+            margin-bottom: 1.4rem;        
+        }
     }
+}
+
+.user-box {
+    display: flex;
+    align-items: center;
     a {
-        font-size: 1rem;
-        margin-bottom: 1.4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 30%;
+        height: 50px;
+        font-size: 14px;
+        font-weight: 600;
+        border: 1px solid $pointer-color;            
+        margin-right: 10px;
+        border-radius: 4px;        
+        &:nth-child(1) {
+            background: #f89b0010;
+            color: $pointer-color !important;
+        }
+        &:nth-child(2) {
+            background: $pointer-color;
+            color: $color-white !important; 
+        }
+        &:last-child {
+            margin-right: 0;
+        }
     }
-  }
+}
 
 // modal
 .modal-overlay {
